--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Blue-Peter-Sea-comedies_68796
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 68796-h/images/img-cover.jpg
 creator:
   author:
     agent_name: Roberts, Morley
@@ -8,6 +11,8 @@ creator:
     gutenberg_agent_id: '6241'
     url: http://www.gutenberg.org/2009/agents/6241
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/68796#The-Blue-Peter-Sea-comedies
 gutenberg_issued: '2022-08-20'
 identifiers:
   gutenberg: '68796'
